moved styles do style.css file

--- a/main.html
+++ b/main.html
@@ -3,44 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <title>My TODO List</title>
-    <style>
-        ul {
-            list-style: none;
-        }
-
-        .task-description {
-            display: block;
-            margin-left: 20px;
-            font-style: italic;
-            color: #666;
-        }
-
-        /* CSS styles for completed tasks */
-        .completed {
-            text-decoration: line-through;
-        }
-
-        /* CSS styles for the edit button */
-        .button-element  {
-            display: block;
-            margin: 5px;
-        }
-
-        /* Initially hide the edit button */
-        .hidden-element {
-            display: inline-block; /* Display button inline */
-            visibility:hidden;
-            margin-left: 10px; /* Add some margin between label and button */
-            vertical-align: middle; /* Align button vertically */
-        }
-
-        /* CSS styles to show the edit button on hover */
-        li:hover .hidden-element {
-            visibility: visible;
-        }
-
-    </style>
+    
 </head>
 <body>
 <h1>TODO List</h1>
