--- a/index.html
+++ b/index.html
@@ -9,16 +9,18 @@
 </head>
 <body>
 <h1>TODO List</h1>
-<form id="todo-form">
+<form id="new-task-form">
     <input type="text" id="todo-input" placeholder="Enter your task...">
     <input type="text" id="description-input" placeholder="Enter task description...">
     <button class="button-element" type="submit">Add Task</button>
-
 </form>
 <ul id="todo-list">
     <!-- Tasks will be dynamically added here -->
 </ul>
-
+<form id="list-handling">
+    <button class="button-element" type="submit">Save List</button>
+</form>
+<script src="task.js"></script> <!-- Link the JavaScript file -->
 <script src="list.js"></script> <!-- Link the JavaScript file -->
 </body>
 </html>
