buttons added, adjusted

--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
 <form id="new-task-form">
     <input type="text" id="todo-input" placeholder="Enter your task...">
     <input type="text" id="description-input" placeholder="Enter task description...">
-    <button class="button-element" type="submit">Add Task</button>
+    <button class="button-element" type="submit" id="add-task">Add Task</button>
 </form>
 <ul id="todo-list">
     <!-- Tasks will be dynamically added here -->
 </ul>
 <form id="list-handling">
-    <button class="button-element" type="submit">Save List</button>
+    <button class="button-element" type="submit" id="save-list">Save List</button>
+    <button class="button-element" type="submit" id="open-list">Open My List</button>
 </form>
 <script src="task.js"></script> <!-- Link the JavaScript file -->
 <script src="list.js"></script> <!-- Link the JavaScript file -->
