--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <body>
 <h1>TODO List</h1>
 <form id="new-task-form">
-    <input type="text" id="todo-input" placeholder="Enter your task...">
+    <input type="text" id="title-input" placeholder="Enter your task...">
     <input type="text" id="description-input" placeholder="Enter task description...">
     <button class="button-element" type="submit" id="add-task">Add Task</button>
 </form>
-<ul id="todo-list">
+<ul id="tasks-todo">
     <!-- Tasks will be dynamically added here -->
 </ul>
 <form id="list-handling">
