span for JSON output added

--- a/index.html
+++ b/index.html
@@ -22,5 +22,8 @@
 </form>
 <script src="task.js"></script> <!-- Link the JavaScript file -->
 <script src="list.js"></script> <!-- Link the JavaScript file -->
+<span id="json-output" class="code-element">
+    <!-- JSON output will be rendered here -->
+</span>
 </body>
 </html>
