extracting JSON from html implemented

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 </form>
 <script src="task.js"></script> <!-- Link the JavaScript file -->
 <script src="list.js"></script> <!-- Link the JavaScript file -->
-<span id="json-output" class="code-element">
+<div id="json-output">
     <!-- JSON output will be rendered here -->
-</span>
+</div>
 </body>
 </html>
